2008-04-08  Werner Pantke  <wpantke@punk-ass-bitch.org>

	* configure.ac:
	* src/Makefile.am:
	added AM_MAINTAINER_MODE and GNOME_MAINTAINER_MODE_DEFINES macros to
	get rid of deprecated library functions

	* src/configloader.h:
	* src/main.cc:
	* src/mainwindow.h:
	* src/treehandler.cc:
	* src/treehandler.h:
	removed usage of deprecated defines in <libgnome/gnome-i18n.h>,
	replaced with gettext macros defined in <glib/gi18n.h>

2008-03-30  Werner Pantke  <wpantke@punk-ass-bitch.org>

	* autogen.sh:
	* configure.ac:
	* m4/Makefile.am:
	* m4/link_as_needed.m4:
	add linking with --as-needed option where available to strip down
	(indirect) dependencies - if you encounter problems with this new
	default behavior (possible if you're using binutils < 2.17), just
	run ./configure or ./autogen.sh respectively with
	--disable-link-as-needed option. If your compiler/linker doesn't
	support linking with --as-needed, the configure script should
	detect and disable it anyway.

2008-03-12  Werner Pantke  <wpantke@punk-ass-bitch.org>

	* Makefile.am:
	* autogen.sh:
	* configure.ac:
	* m4/Makefile.am:
	readded m4/ directory

	* m4/lf_cxx.m4:
	* m4/lf_host_type.m4:
	* m4/lf_warnings.m4:
	added some (slightly modified) macros from GNU Autotoolset as they
	don't seem to be very common - this should fix FTBFS vor svn users

2008-02-10  Werner Pantke  <wpantke@punk-ass-bitch.org>

	* AUTHORS:
	* COPYING:
	* INSTALL:
	* Makefile.am:
	* NEWS:
	* THANKS:
	* config.guess:
	* config.h.in:
	* config.sub:
	* configure.ac:
	* depcomp:
	* doc/Makefile.am:
	* doc/Makefile.in:
	* install-sh:
	* intltool-extract.in:
	* intltool-merge.in:
	* intltool-update.in:
	* m4/Makefile.am:
	* m4/Makefile.in:
	* missing:
	* po/Makefile.in.in:
	* profiles/Makefile.am:
	* profiles/Makefile.in:
	* src/Makefile.am:
	* src/Makefile.in:
	* src/checkbutton.cc:
	* src/checkbutton.h:
	* src/colorbutton.cc:
	* src/colorbutton.h:
	* src/combobox.cc:
	* src/combobox.h:
	* src/configloader.cc:
	* src/configloader.h: